# data-encoding

./: .gitignore  .travis.yml  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  Makefile  README.md  appveyor.yml  bench.sh  data_encoding_www.js  data_encoding_www_bg.wasm  index.css  index.html  rustfmt.toml  test.sh  travis.sh  update-doc.sh  update_www.sh
.cargo/: config.toml
.github/workflows/: audit.yml  bench.yml  bin.yml  build.yml  ci.yml  clippy.yml  coverage.yml  fmt.yml  nostd.yml  test.yml
benches/: diff.rs  lib.rs
cmp/: Cargo.toml  build.rs
cmp/benches/: lib.rs
cmp/src/: lib.rs  ref.c
cmp/tests/: lib.rs
examples/: encode.rs
examples/encode/: base.rs  error.rs  io.rs  main.rs  tool.rs
lib/: CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  README.md
lib/benches/: lib.rs
lib/fuzz/: Cargo.toml  analyze.sh  compact.sh  debug.sh  run.sh  test.sh
lib/fuzz/examples/: analyze.rs  debug.rs  groupby.rs
lib/fuzz/fuzz_targets/: encode_write.rs  encoder.rs  round_trip.rs  spec_spec_base.rs  template.rs  v3-preview.rs
lib/fuzz/src/: cmd.rs  gen.rs  lib.rs  spec.rs
lib/macro/: CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  README.md
lib/macro/internal/: Cargo.lock.msrv  Cargo.toml
lib/macro/internal/src/: lib.rs
lib/macro/src/: lib.rs
lib/macro/tests/: lib.rs
lib/src/: lib.rs  v3_preview.rs
lib/tests/: lib.rs
lib/v3/: CHANGELOG.md  Cargo.toml  README.md
lib/v3/benches/: lib.rs
lib/v3/src/: lib.rs
lib/v3/tests/: lib.rs
nostd/: Cargo.toml
nostd/src/: main.rs
scripts/: travis.sh
src/: base.rs  decode.rs  encode.rs  lib.rs  tool.rs
tests/: diff.rs  lib.rs
www/: .gitignore  Cargo.toml  Makefile  TODO  rustfmt.toml
www/src/: lib.rs  range.rs  state.rs  utf8.rs
www/static/: index.css  index.html  index.js
xtask/: Cargo.toml
xtask/src/: main.rs
