[package]
name = "data-encoding"
version = "1.0.0"
authors = ["Julien Cretin <git@ia0.eu>"]
license = "MIT"
readme = "README.md"
keywords = ["encoding", "base64", "base32", "hex"]
repository = "https://github.com/ia0/data-encoding"
homepage = "https://github.com/ia0/data-encoding"
documentation = "https://ia0.github.com/data-encoding/data_encoding"
description = """
Generic data encoding functions.

This crate is meant to provide mathematical guarantees, to conform to
RFC 4648 (base64, base32, hex, etc.), to be efficient, and to give
choice between allocating and in-place functions.

This crate also provides an exhaustive example with similar
functionality to the base64 GNU program. It supports common bases
(base2, base4, base8, base16, hex, base32, base32hex, base64, and
base64url) and custom bases (defined on the command-line by their
padding and symbols in value order).
"""
include = ["Cargo.toml", "LICENSE", "src/*.rs"]

[[example]]
name = "encode"
path = "examples/encode/main.rs"

[dev-dependencies]
# Used by the example.
getopts = "0.2.14"
# Used by the tests and benchmarks.
rustc-serialize = "0.3.16"
