[package]
name = "cmp"
version = "0.1.0"
authors = ["ia0 <git@ia0.eu>"]
license = "MIT"
edition = "2018"
build = "build.rs"
publish = false

[dependencies]
base64 = { git = "https://github.com/alicemaz/rust-base64" }
data-encoding = { path = "../lib" }
libc = "0.2"
rustc-serialize = "0.3"
lazy_static = "1"

[build-dependencies]
cc = "1"
