[package]
name = "data-encoding"
version = "2.1.1"
authors = ["Julien Cretin <git@ia0.eu>"]
license = "MIT"
edition = "2018"
keywords = ["base-conversion", "encoding", "base64", "base32", "hex"]
categories = ["encoding"]
readme = "README.md"
repository = "https://github.com/ia0/data-encoding"
documentation = "https://docs.rs/data-encoding"
description = "Efficient and customizable data-encoding functions"
include = ["Cargo.toml", "LICENSE", "README.md", "src/lib.rs"]

[badges]
appveyor = { repository = "ia0/data-encoding" }
coveralls = { repository = "ia0/data-encoding" }
is-it-maintained-issue-resolution = { repository = "ia0/data-encoding" }
is-it-maintained-open-issues = { repository = "ia0/data-encoding" }
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "ia0/data-encoding" }
