[package]
name = "data-encoding"
version = "2.6.0"
authors = ["Julien Cretin <git@ia0.eu>"]
license = "MIT"
edition = "2018"
rust-version = "1.48"
keywords = ["no_std", "base64", "base32", "hex"]
categories = ["encoding", "no-std"]
readme = "README.md"
repository = "https://github.com/ia0/data-encoding"
documentation = "https://docs.rs/data-encoding"
description = "Efficient and customizable data-encoding functions like base64, base32, and hex"
include = ["Cargo.toml", "LICENSE", "README.md", "src/lib.rs"]

# TODO: Remove this once doc_auto_cfg is in the MSRV.
[package.metadata.docs.rs]
rustdoc-args = ["--cfg=docsrs"]

[features]
# All features are enabled by default. Because of how cargo works, if you want to disable features,
# you have to disable all of them, then enable back those you need. For example:
# - To disable "std", you need to enable ["alloc", "all"].
# - To disable all bases but base32 and base64, you need to enable ["std", "base32", "base64"].
default = ["std", "all"]
alloc = []
std = ["alloc"]
all = ["base2", "base4", "base8", "base16", "base32", "base64"]
base2 = []
base4 = []
base8 = []
base16 = []
base32 = []
base64 = []
