[package]
name = "nostd"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
edition = "2018"
license = "MIT"
publish = false

[features]
alloc = ["data-encoding/alloc"]

[dependencies]
data-encoding = { path = "../lib", default-features = false }
libc = { version = "0.2", default-features = false }

[profile.release]
panic = "abort"
