[package]
name = "nostd"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
edition = "2021"
license = "MIT"
publish = false
resolver = "2"

[features]
alloc = ["data-encoding/alloc"]

[dependencies]
data-encoding = { path = "../lib", default-features = false }
data-encoding-macro = { path = "../lib/macro" }
libc = { version = "0.2", default-features = false }

[profile.release]
panic = "abort"
