[package]
name = "data-encoding-www"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.81"
repository = "https://github.com/ia0/data-encoding"
description = "Website for data-encoding"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
data-encoding = { path = "../lib" }
lazy_static = "1"
wasm-bindgen = "0.2"

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
