[package]
name = "data-encoding-macro-internal"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "MIT"
readme = "README.md"
description = "Internal library for data-encoding-macro"
include = ["Cargo.toml", "LICENSE", "README.md", "src/lib.rs"]

[lib]
proc-macro = true

[features]
stable = ["proc-macro-hack"]

[dependencies]
data-encoding = { version = "2.0.0", path = "../.." }
proc-macro-hack = { version = "0.4.0", optional = true }
syn = "0.11.11"
