[package]
name = "data-encoding-macro-internal"
version = "0.1.7"
authors = ["Julien Cretin <cretin@google.com>"]
license = "MIT"
edition = "2018"
description = "Internal library for data-encoding-macro"
readme = "README.md"
repository = "https://github.com/ia0/data-encoding"
include = ["Cargo.toml", "LICENSE", "README.md", "src/lib.rs"]

[lib]
proc-macro = true

[features]
stable = ["proc-macro-hack"]

[dependencies]
data-encoding = { version = "2.1", path = "../.." }
proc-macro-hack = { version = "0.5", optional = true }
syn = "0.15"
